[package]
name = "nilla"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#inkwell_internals = "0.7.0"
inkwell = { version = "0.4.0", features = ["llvm17-0"] }
libc = "0.2.146"
melior = "0.16.2"
mimalloc-rust = "0.2.1"
safer-ffi = "0.1.5"
# llvm-sys = "140.0.5"

[profile.dev]
debug = true
