[package]
name = "pajama"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.146"
# melior = "0.16.2"
melior = { path = "../melior/melior" }
mimalloc-rust = "0.2.1"
mio = { version = "0.8.11", features = ["os-poll", "net"]}
safer-ffi = "0.1.5"
# llvm-sys = "140.0.5"

[profile.dev]
debug = true
